[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Environment/Cabin.png" type="Texture" id=1]
[ext_resource path="res://World/Environment/CabinUnder.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 26.0

[node name="CabinUnder" type="Sprite" groups=[
"ToolTipTrigger",
]]
texture = ExtResource( 1 )
offset = Vector2( 0, -24 )
hframes = 2
frame = 1
script = ExtResource( 2 )

[node name="CollisionsArea2D" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="Floor" type="CollisionPolygon2D" parent="CollisionsArea2D"]
polygon = PoolVector2Array( -30, 2, -22, -3, 24, -3, 30, 1, 30, 4, -30, 4 )

[node name="Roof" type="CollisionPolygon2D" parent="CollisionsArea2D"]
polygon = PoolVector2Array( -36, -25, -32, -48, 21, -48, 21, -54, 32, -54, 32, -34, 28, -21, 18, -30, 18, -35, -27, -35, -27, -25 )

[node name="DoorBack" type="CollisionPolygon2D" parent="CollisionsArea2D"]
polygon = PoolVector2Array( 30, 1, 30, -27, 28, -27, 28, -21, 18, -30, 18, -3, 24, -3 )

[node name="DoorFront" type="CollisionPolygon2D" parent="CollisionsArea2D"]
polygon = PoolVector2Array( -30, 2, -30, -25, -27, -25, -27, -35, -23, -35, -23, -35, -22, -35, -22, -3 )

[node name="TooltipKeyArea2D" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TooltipKeyArea2D"]
position = Vector2( -32, -11 )
shape = SubResource( 1 )

[node name="TooltipNoteArea2D" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TooltipNoteArea2D"]
position = Vector2( -8, -19 )
shape = SubResource( 2 )

[connection signal="area_entered" from="TooltipKeyArea2D" to="." method="_on_TooltipArea2D_area_entered"]
[connection signal="area_entered" from="TooltipNoteArea2D" to="." method="_on_Area2D_area_entered"]
